Bug 343992 - Error in program history menu
Summary: Error in program history menu
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 5.2.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 347727 356236 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-10 07:54 UTC by zeugma
Modified: 2016-03-24 10:44 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
muon history menu screenshot (274.51 KB, image/png)
2015-02-10 07:56 UTC, zeugma
Details
Fix the history widget layout (1.93 KB, patch)
2015-08-31 13:42 UTC, Carlo Vanini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zeugma 2015-02-10 07:54:08 UTC
i get an error in the history section of the muon package manager.

Reproducible: Always
Comment 1 zeugma 2015-02-10 07:56:27 UTC
Created attachment 91002 [details]
muon history menu screenshot
Comment 2 Carlo Vanini 2015-08-31 13:42:58 UTC
Created attachment 94305 [details]
Fix the history widget layout

The history dialog also had the problem that once opened and closed, it would not open again. This is also corrected.
Comment 3 Maarten Bezemer 2015-10-25 16:27:48 UTC
I build a new muon package for Kubuntu 15.10 (ppa:veger/ppa) with your patch and the history window is indeed fixed.
Thanks!
Comment 4 Aleix Pol 2015-12-10 14:33:18 UTC
Git commit bcc6f0334b9d3ffc6421571b758af5f84d90bb8c by Aleix Pol, on behalf of Carlo Vanini.
Committed on 10/12/2015 at 14:28.
Pushed by apol into branch 'master'.

Fix history dialog layout.

REVIEW: 126288

M  +5    -1    src/muonapt/HistoryView/HistoryView.cpp
M  +1    -1    src/muonapt/QAptActions.cpp

http://commits.kde.org/muon/bcc6f0334b9d3ffc6421571b758af5f84d90bb8c
Comment 5 Carlo Vanini 2016-03-18 10:44:56 UTC
*** Bug 356236 has been marked as a duplicate of this bug. ***
Comment 6 Carlo Vanini 2016-03-18 10:56:26 UTC
*** Bug 347727 has been marked as a duplicate of this bug. ***
Comment 7 wikispam 2016-03-23 20:40:15 UTC
I still have the same problem (with Muon Package Manager Version 5.4.2, KDE Frameworks 5.15.0, Qt 5.4.2 (built against 5.4.2)).
Comment 8 Carlo Vanini 2016-03-24 10:44:50 UTC
(In reply to wikispam from comment #7)
> I still have the same problem (with Muon Package Manager Version 5.4.2, KDE
> Frameworks 5.15.0, Qt 5.4.2 (built against 5.4.2)).

The fix has been committed after Muon version 5.4.3