Fix history dialog layout.

REVIEW: 126288
BUG: 343992